# interface

./: .env.example  .gitignore  .secrets-example.toml  MANIFEST.in  Makefile  README.md  docker-compose.yml  requirements.txt  settings.toml  setup.cfg  setup.py  yoyo.ini
.github/workflows/: coverage.yml  linux.yml
config/: .env-sample  settings.toml
docs/: HACKING.md  openapi.yaml  webfinger.md
docs/openapi/: package-lock.json  package.json
foo/: app.py
forges/: github.py
interface/: __init__.py  __main__.py  app.py  auth.py  client.py  db.py  error.py  forge.py  git.py  gitea.py  github.py  issue.py  local_settings_example.py  meta.py  ns.py  repo.py  runner.py  settings.py  user.py  utils.py  webfinger.py
interface/api/: __init__.py
interface/db/: __init__.py  activity.py  cache.py  comments.py  conn.py  events.py  interfaces.py  issues.py  repo.py  subscriptions.py  users.py  webfinger.py
interface/forges/: __init__.py  base.py  gitea.py  github.py  notifications.py  payload.py  utils.py
libgit/: Cargo.toml
libgit/src/: error.rs  lib.rs  system.rs
migrations/: 20211023_01_0W52q-event-subscriptions.py  20211024_01_h2IuD-interface-jobs.py  20211223_01_pFC7s-interface-forks.py  20211226_01_zx3oY-forge-data.py  20220102_01_q4rHE-events.py  20220116_01_Ur7VF-activities.py
scripts/: coverage.sh  lib.sh  spellcheck.sh
tests/: conftest.py  meta_utils.py  test_auth.py  test_db.py  test_default_headers.py  test_errors.py  test_factory.py  test_git.py  test_issue.py  test_meta.py  test_ns.py  test_repo.py  test_user.py  test_utils.py  test_webfinger.py
(+60 files in other folders)
