[package]
name = "libgit"
version = "0.1.0"
edition = "2021"
authors = ["Aravinth Manivannan <realaravinth@batsense.net>"]
license = "AGPLv3 or later version"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libgit"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
git2 = "0.13.23"
url = "2.2"
thiserror = "1.0.30"
validator = "0.14.0"
sled = "0.34.7"
serde = { version = "1.0.130", features = ["derive"]}
bincode = "1.3.3"
chrono = { version = "0.4.19", features = ["serde"]}

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]
